--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Harana Search</title>
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://analytics.harana.com/dkfyukxr.js?st='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','P8Q6JRCD');</script>
     <div id="root"></div>
     <script src="main.js" type="module"></script>
-  <script>
+    <script>
     function base64Bytes(bytes) {
       var base64    = ''
       var encodings = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/'
